* Build after failed was not getting set properly. Patch by Brad Clarke.
* Fix a bug where projects would hang if a build failed with unchecked exceptions or errors.

ProjectConfig:
----------------------
* Validates subelements by calling their "validate()" methods.

Schedule:
----------------------
* Fix getTimeToNextBuild to adjust for daylight savings time (CC-104).

SfeeFrsPublisher:
----------------------
* A new publisher for uploading files to a SourceForge Enterprise Edition's File Release System.

SfeeTrackerPublisher:
----------------------
* A new publisher for creating a tracker artifact in a SourceForge Enterprise Edition project.
* Extracted XPathAwareChild and NamedXPathAwareChild to make usable by other plugins.

SfeeDocumentManagerPublisher:
----------------------
* A new publisher for creating a Document Manager entry in a SourceForge Enterprise Edition project.
* If a Document Manager entry already exists in the specified folder with the same name, then the document being published will be added as a new version.

StarTeam
----------------------
* Logging is unclear in a multi-threaded environment, so prepend 'url' string to all log messages. (CC-368) Patch by Benjamin Burgess
* Modifications reported with extra '/' character between file name and parent folder name (i.e. "AdviceAgent\implementation\build_config\/build.xml"), so if the folder name returned form the server ends with either '/' or '\' then remove it before setting in modification. (CC-368) Patch by Benjamin Burgess
* Modifications done by any user with name = "BuildMaster" are no longer ignored. (CC-368) Patch by Benjamin Burgess
* Deletions are reported as the deleter instead of the last editor. (CC-368) Patch by Benjamin Burgess

ThreadQueue
----------------------
* Fixes for incorrect methods (CC-389). Provided by Tarik Idris, reviewed by Kent Spillner.

VSSJournal:
----------------------
* handle dirs with same prefix (CC-307).  Patch by Dan Rollo.